Improved CiviMail header

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -75,7 +75,7 @@
       </table><!-- End Header -->
 <!-- CIVIMAIL BODY -->
       <!-- Call to action -->
-      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin-bottom: 15px;">
+      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
         <tr>
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#1e9dd8">
             <table>
@@ -85,9 +85,11 @@
                 </td>
               </tr>
             </table>
-            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+            <p style="margin: 0 0 10px 0;">
               THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT. REPLACE ALL CAPS TEXT IN THIS EMAIL WITH ACTUAL TEXT.
-              <table width="120" align="left" style="margin: 15px 0 5px;">
+            </p>
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="120" align="left" style="margin: 5px 0;">
                 <tr>
                   <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
                     <a href="http://citybibleforum.org"
@@ -107,9 +109,14 @@
             </p>
           </td>
         </tr>
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
       </table><!-- Call to action -->
       <!-- One column - no image - pale/odd -->
-      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin-bottom: 15px;">
+      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
         <tr>
           <td style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#d8eaf9">
             <table>
@@ -119,12 +126,11 @@
                 </td>
               </tr>
             </table>
-            <p style="margin-top: 0;">
+            <p style="margin: 0 0 10px 0;">
               THIS IS THE DESCRIPTION. ADD, EDIT, OR DELETE TEXT HERE.
             </p>
             <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-              THIS IS THE FINAL PARAGRAPH. DON'T DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
-              <table width="120" align="left" style="margin: 15px 0 5px;">
+              <table width="120" align="left" style="margin: 5px 0;">
                 <tr>
                   <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; width: 120px;" align="center">
                     <a href="http://citybibleforum.org"
@@ -144,9 +150,14 @@
             </p>
           </td>
         </tr>
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
       </table><!-- One column - no image - pale/odd -->
       <!-- One column - no image - dark/even -->
-      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin-bottom: 15px;">
+      <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
         <tr>
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#02426f">
             <table>
@@ -156,12 +167,11 @@
                 </td>
               </tr>
             </table>
-            <p style="margin-top: 0;">
+            <p style="margin-top: 0 0 10px 0;">
               THIS IS THE DESCRIPTION. ADD, EDIT, OR DELETE TEXT HERE.
             </p>
             <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-              THIS IS THE FINAL PARAGRAPH. DON'T DELETE IT. DON'T PRESS &lt;ENTER&gt; WHILE IN THIS PARAGRAPH OR YOU COULD BREAK THE HTML. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
-              <table width="120" align="left" style="margin: 15px 0 5px;">
+              <table width="120" align="left" style="margin: 5px 0;">
                 <tr>
                   <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
                     <a href="http://citybibleforum.org"
@@ -181,9 +191,14 @@
             </p>
           </td>
         </tr>
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
       </table><!-- One column - no image - dark/even -->
       <!-- 2 Column - text left - landscape image - pale/odd -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff">
         <tr>
           <td style="background-color: #d8eaf9; border-radius: 4px;">
             <table align="right" width="49%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
@@ -207,9 +222,11 @@
                       </td>
                     </tr>
                   </table>
-                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                  <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
-                    <table width="120" align="left" style="margin: 15px 0 5px;">
+                  </p>
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    <table width="120" align="left" style="margin: 5px 0;">
                       <tr>
                         <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; width: 120px;" align="center">
                           <a href="http://citybibleforum.org"
@@ -232,9 +249,14 @@
             </table>
           </td>
         </tr>
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
       </table><!-- End 2 Column - text left - landscape image - pale/odd -->
       <!-- 2 Column - text left - landscape image - dark/even -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff">
         <tr>
           <td style="background-color: #02426f; border-radius: 4px;">
             <table align="right" width="49%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
@@ -258,9 +280,11 @@
                       </td>
                     </tr>
                   </table>
-                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                  <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
-                    <table width="120" align="left" style="margin: 15px 0 5px;">
+                  </p>
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    <table width="120" align="left" style="margin: 5px 0;">
                       <tr>
                         <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
                           <a href="http://citybibleforum.org"
@@ -283,9 +307,14 @@
             </table>
           </td>
         </tr>
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
       </table><!-- End 2 Column - text left - landscape image - dark/even -->
       <!-- 2 Column - text left - portrait image - pale/odd -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff">
         <tr>
           <td style="background-color: #d8eaf9; border-radius: 4px;">
             <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
@@ -298,9 +327,11 @@
                       </td>
                     </tr>
                   </table>
-                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                  <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
-                    <table width="120" align="left" style="margin: 15px 0 5px;">
+                  </p>
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    <table width="120" align="left" style="margin: 5px 0;">
                       <tr>
                         <td bgcolor="#02426f" style="padding: 5px 0; background-color: #02426f; border-radius: 4px; width: 120px;" align="center">
                           <a href="http://citybibleforum.org"
@@ -330,9 +361,14 @@
             </table>
           </td>
         </tr>
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
       </table><!-- End 2 Column - text left - portrait image - pale/odd -->
       <!-- 2 Column - text left - portrait image - dark/even -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff" style="margin-bottom: 15px;">
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" bgcolor="#ffffff">
         <tr>
           <td style="background-color: #02426f; border-radius: 4px;">
             <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
@@ -345,9 +381,11 @@
                       </td>
                     </tr>
                   </table>
-                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                  <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
-                    <table width="120" align="left" style="margin: 15px 0 5px;">
+                  </p>
+                  <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+                    <table width="120" align="left" style="margin: 5px 0;">
                       <tr>
                         <td bgcolor="#ffffff" style="padding: 5px 0; background-color: #ffffff; border-radius: 4px; width: 120px;" align="center">
                           <a href="http://citybibleforum.org"
@@ -377,9 +415,19 @@
             </table>
           </td>
         </tr>
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
       </table><!-- End 2 Column - text left - portrait image - dark/even -->
       <!-- Blog Headlines -->
-      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth" style="margin-top: 30px; margin-bottom: 30px;">
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
+        <tr>
+          <td style="height: 15px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
             <table>
@@ -493,6 +541,11 @@
 <!-- CIVIMAIL FOOTER -->
       <!-- Footer -->
       <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center">
+        <tr>
+          <td style="height: 30px; font-size: 8px;">
+            &nbsp;
+          </td>
+        </tr>
         <tr>
           <td bgcolor="#363636" style="padding:30px 0">
             <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
