--- a/civimail-template.html
+++ b/civimail-template.html
@@ -430,108 +430,150 @@
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table>
-              <tr>
-                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
-                  Melbourne
-                </td>
-              </tr>
-            </table>
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="100" align="left" style="margin: 0;">
+                <tr>
+                  <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
+                    <a href="http://citybibleforum.org"
+                       style="
+                       color: #ffffff;
+                       font-size: 12px;
+                       font-weight: bold;
+                       text-align: center;
+                       text-decoration: none;
+                       font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                       -webkit-text-size-adjust: none;">
+                      Sydney
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </p>
           </td>
           <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
-            <a href="http://citybibleforum.org" style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
+            <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE WITH LINK TO WEBSITE
-            </a>
+            </span>
             <br />
             SUMMARY TEXT GOES HERE
           </td>
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table>
-              <tr>
-                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
-                  Blog
-                </td>
-              </tr>
-            </table>
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="100" align="left" style="margin: 0;">
+                <tr>
+                  <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
+                    <a href="http://citybibleforum.org"
+                       style="
+                       color: #ffffff;
+                       font-size: 12px;
+                       font-weight: bold;
+                       text-align: center;
+                       text-decoration: none;
+                       font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                       -webkit-text-size-adjust: none;">
+                      Melbourne
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </p>
           </td>
           <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
-            <a href="http://citybibleforum.org" style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
+            <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE WITH LINK TO WEBSITE
-            </a>
+            </span>
             <br />
             SUMMARY TEXT GOES HERE
           </td>
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table>
-              <tr>
-                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
-                  Library
-                </td>
-              </tr>
-            </table>
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="100" align="left" style="margin: 0;">
+                <tr>
+                  <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
+                    <a href="http://citybibleforum.org"
+                       style="
+                       color: #ffffff;
+                       font-size: 12px;
+                       font-weight: bold;
+                       text-align: center;
+                       text-decoration: none;
+                       font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                       -webkit-text-size-adjust: none;">
+                      Brisbane
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </p>
           </td>
           <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
-            <a href="http://citybibleforum.org" style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
+            <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE WITH LINK TO WEBSITE
-            </a>
+            </span>
             <br />
             SUMMARY TEXT GOES HERE
           </td>
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table>
-              <tr>
-                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
-                  Sydney
-                </td>
-              </tr>
-            </table>
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="100" align="left" style="margin: 0;">
+                <tr>
+                  <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
+                    <a href="http://citybibleforum.org"
+                       style="
+                       color: #ffffff;
+                       font-size: 12px;
+                       font-weight: bold;
+                       text-align: center;
+                       text-decoration: none;
+                       font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                       -webkit-text-size-adjust: none;">
+                      Perth
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </p>
           </td>
           <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
-            <a href="http://citybibleforum.org" style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
+            <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE WITH LINK TO WEBSITE
-            </a>
+            </span>
             <br />
             SUMMARY TEXT GOES HERE
           </td>
         </tr>
         <tr style="margin-top: 10px;">
           <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table>
-              <tr>
-                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
-                  National
-                </td>
-              </tr>
-            </table>
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="100" align="left" style="margin: 0;">
+                <tr>
+                  <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
+                    <a href="http://citybibleforum.org"
+                       style="
+                       color: #ffffff;
+                       font-size: 12px;
+                       font-weight: bold;
+                       text-align: center;
+                       text-decoration: none;
+                       font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                       -webkit-text-size-adjust: none;">
+                      Adelaide
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </p>
           </td>
           <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
-            <a href="http://citybibleforum.org" style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
+            <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE WITH LINK TO WEBSITE
-            </a>
-            <br />
-            SUMMARY TEXT GOES HERE
-          </td>
-        </tr>
-        <tr style="margin-top: 10px;">
-          <td valign="top" style="width: 100px; padding: 12px 15px;">
-            <table>
-              <tr>
-                <td bgcolor="#1e9dd8" style="color:#ffffff; font-size: 12px; font-weight: bold; text-align: center; -webkit-text-size-adjust: none; padding: 5px 0; background-color: #1e9dd8; border-radius: 4px; width: 100px;">
-                  Brisbane
-                </td>
-              </tr>
-            </table>
-          </td>
-          <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
-            <a href="http://citybibleforum.org" style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
-              TITLE WITH LINK TO WEBSITE
-            </a>
+            </span>
             <br />
             SUMMARY TEXT GOES HERE
           </td>
@@ -540,6 +582,68 @@
       <!-- end blog headlines -->
 <!-- CIVIMAIL FOOTER -->
       <!-- Footer -->
+      <table width="580" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
+        <tr style="margin-top: 10px;">
+          <td valign="top" style="width: 100px; padding: 12px 15px;">
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="100" align="left" style="margin: 0;">
+                <tr>
+                  <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
+                    <a href="http://citybibleforum.org"
+                       style="
+                       color: #ffffff;
+                       font-size: 12px;
+                       font-weight: bold;
+                       text-align: center;
+                       text-decoration: none;
+                       font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                       -webkit-text-size-adjust: none;">
+                      Library
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </p>
+          </td>
+          <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
+            <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
+              TITLE WITH LINK TO WEBSITE
+            </span>
+            <br />
+            SUMMARY TEXT GOES HERE
+          </td>
+        </tr>
+        <tr style="margin-top: 10px;">
+          <td valign="top" style="width: 100px; padding: 12px 15px;">
+            <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
+              <table width="100" align="left" style="margin: 0;">
+                <tr>
+                  <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
+                    <a href="http://citybibleforum.org"
+                       style="
+                       color: #ffffff;
+                       font-size: 12px;
+                       font-weight: bold;
+                       text-align: center;
+                       text-decoration: none;
+                       font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+                       -webkit-text-size-adjust: none;">
+                      Blog
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </p>
+          </td>
+          <td style="font-size: 11px; color:#333333; text-align: left; padding-left: 8px;" valign="middle">
+            <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
+              TITLE WITH LINK TO WEBSITE
+            </span>
+            <br />
+            SUMMARY TEXT GOES HERE
+          </td>
+        </tr>
+      </table>
       <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center">
         <tr>
           <td style="height: 30px; font-size: 8px;">
