Streamline HTML in CiviMail template

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -78,13 +78,9 @@
       <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
         <tr>
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#1e9dd8">
-            <table>
-              <tr>
-                <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
-                  MESSAGE TITLE
-                </td>
-              </tr>
-            </table>
+            <p style="font-size: 16px; font-weight: bold; margin: 0 10px 10px 0; color: #ffffff;">
+              MESSAGE TITLE
+            </p>
             <p style="margin: 0 0 10px 0;">
               THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT. REPLACE ALL CAPS TEXT IN THIS EMAIL WITH ACTUAL TEXT.
             </p>
@@ -117,13 +113,9 @@
       <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
         <tr>
           <td style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#d8eaf9">
-            <table>
-              <tr>
-                <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #02426f;">
-                  SECTION - NO IMAGE - ODD
-                </td>
-              </tr>
-            </table>
+            <p style="font-size: 16px; font-weight: bold; margin: 0 10px 10px 0; color: #02426f;">
+              SECTION - NO IMAGE - ODD
+            </p>
             <p style="margin: 0 0 10px 0;">
               THIS IS THE DESCRIPTION. ADD, EDIT, OR DELETE TEXT HERE.
             </p>
@@ -156,13 +148,9 @@
       <table width="580"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
         <tr>
           <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px; border-radius: 4px;" bgcolor="#02426f">
-            <table>
-              <tr>
-                <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
-                  SECTION - NO IMAGE - EVEN
-                </td>
-              </tr>
-            </table>
+            <p style="font-size: 16px; font-weight: bold; margin: 0 10px 10px 0; color: #ffffff;">
+              SECTION - NO IMAGE - EVEN
+            </p>
             <p style="margin: 0 0 10px 0;">
               THIS IS THE DESCRIPTION. ADD, EDIT, OR DELETE TEXT HERE.
             </p>
@@ -209,13 +197,9 @@
             <table align="left" width="49%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
               <tr>
                 <td style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
-                  <table>
-                    <tr>
-                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #02426f;">
-                        SECTION - LANDSCAPE IMAGE - ODD
-                      </td>
-                    </tr>
-                  </table>
+                  <p style="font-size: 16px; font-weight: bold; margin: 0 10px 10px 0; color: #02426f;">
+                    SECTION - LANDSCAPE IMAGE - ODD
+                  </p>
                   <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                   </p>
@@ -265,13 +249,9 @@
             <table align="left" width="49%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
               <tr>
                 <td style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
-                  <table>
-                    <tr>
-                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
-                        SECTION - LANDSCAPE IMAGE - EVEN
-                      </td>
-                    </tr>
-                  </table>
+                  <p style="font-size: 16px; font-weight: bold; margin: 0 10px 10px 0; color: #ffffff;">
+                    SECTION - LANDSCAPE IMAGE - EVEN
+                  </p>
                   <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                   </p>
@@ -310,13 +290,9 @@
             <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
               <tr>
                 <td width="54%" style="font-size: 14px; color: #333333; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
-                  <table>
-                    <tr>
-                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #02426f;">
-                        SECTION - PORTRAIT IMAGE - ODD
-                      </td>
-                    </tr>
-                  </table>
+                  <p style="font-size: 16px; font-weight: bold; margin: 0 10px 10px 0; color: #02426f;">
+                    SECTION - PORTRAIT IMAGE - ODD
+                  </p>
                   <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                   </p>
@@ -362,13 +338,9 @@
             <table width="100%" cellpadding="0" cellspacing="0" border="0" class="deviceWidth">
               <tr>
                 <td width="54%" style="font-size: 14px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; line-height: 24px; vertical-align: top; padding: 15px;">
-                  <table>
-                    <tr>
-                      <td valign="middle" style="font-size: 16px; font-weight: bold; padding: 0 10px 10px 0; color: #ffffff;">
-                        SECTION - PORTRAIT IMAGE - EVEN
-                      </td>
-                    </tr>
-                  </table>
+                  <p style="font-size: 16px; font-weight: bold; margin: 0 10px 10px 0; color: #ffffff;">
+                    SECTION - PORTRAIT IMAGE - EVEN
+                  </p>
                   <p style="margin: 0 0 10px 0;">
                     THIS IS THE CALL TO ACTION - NO LONGER THAN A TWEET. EITHER EDIT THE ACTION BUTTON OR DELETE IT.
                   </p>
@@ -564,7 +536,7 @@
             <table width="100" style="margin: 0;">
               <tr>
                 <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
-                  <a href="http://citybibleforum.org"
+                  <a href="http://citybibleforum.org/library"
                      style="
                      color: #ffffff;
                      font-size: 12px;
@@ -581,10 +553,10 @@
           </td>
           <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
-              TITLE OF ARTICLE
+              Online resources
             </span>
             <br />
-            SUMMARY TEXT GOES HERE
+            Videos, audio, and Bible reading material &ndash; and more!
           </td>
         </tr>
         <tr>
@@ -592,7 +564,7 @@
             <table width="100" style="margin: 0;">
               <tr>
                 <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
-                  <a href="http://citybibleforum.org"
+                  <a href="http://citybibleforum.org/blog"
                      style="
                      color: #ffffff;
                      font-size: 12px;
@@ -609,10 +581,10 @@
           </td>
           <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
-              TITLE OF ARTICLE
+              Thoughtful articles
             </span>
             <br />
-            SUMMARY TEXT GOES HERE
+            Reflections on the big questions facing city workers
           </td>
         </tr>
       </table>
@@ -652,8 +624,6 @@
                     </tr>
                     <tr>
                       <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
-                        National office:<br/>
-                        <br/>
                         {domain.address}<br/>
                         {domain.phone}
                       </td>
