--- a/civimail-template.html
+++ b/civimail-template.html
@@ -50,7 +50,7 @@
             <table border="0" cellpadding="0" cellspacing="0" align="left" class="deviceWidth">
               <tr>
                 <td style="padding: 0;">
-                  <a href="http://citybibleforum.org"><img src="http://citybibleforum.org/sites/all/themes/cbootf/logo-email-signature.jpg" alt="" border="0" /></a>
+                  <a href="http://citybibleforum.org"><img src="http://citybibleforum.org/sites/all/themes/cbootf/logo-email-signature.jpg" alt="City Bible Forum" border="0" /></a>
                 </td>
               </tr>
             </table><!-- End Logo -->
@@ -187,9 +187,7 @@
               <tr>
                 <td valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-                    <a href="#">
-                      <img width="267" src="http://citybibleforum.org/sites/default/files/images/content/Whats-so-great--highlight.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
-                    </a>
+                    <img width="267" src="http://citybibleforum.org/sites/default/files/images/content/Whats-so-great--highlight.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
                   </p>
                 </td>
               </tr>
@@ -239,9 +237,7 @@
               <tr>
                 <td valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-                    <a href="#">
-                      <img width="267" src="http://citybibleforum.org/sites/default/files/images/content/Coopers-Event_Rotating-Banner.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
-                    </a>
+                    <img width="267" src="http://citybibleforum.org/sites/default/files/images/content/Coopers-Event_Rotating-Banner.jpg" alt="" border="0" style="border-radius: 4px; width: 267px; display: block;" class="deviceWidth" />
                   </p>
                 </td>
               </tr>
@@ -316,9 +312,7 @@
                 </td>
                 <td width="46%" valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-                    <a href="#">
-                      <img width="267" src="http://citybibleforum.org/sites/default/files/images/sydney/2013/re-think.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
-                    </a>
+                    <img width="267" src="http://citybibleforum.org/sites/default/files/images/sydney/2013/re-think.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
                   </p>
                 </td>
               </tr>
@@ -364,9 +358,7 @@
                 </td>
                 <td width="46%" valign="top" align="right" class="center" style="padding: 0;">
                   <p style="mso-table-lspace: 0; mso-table-rspace: 0; margin: 0;">
-                    <a href="#">
-                      <img width="267" src="http://citybibleforum.org//sites/default/files/images/content/monkey-suit--aaron.michels--flickr.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
-                    </a>
+                    <img width="267" src="http://citybibleforum.org//sites/default/files/images/content/monkey-suit--aaron.michels--flickr.jpg" alt="" border="0" style="border-radius: 4px; width: 100%; display: block; max-width: 267px;" />
                   </p>
                 </td>
               </tr>
@@ -556,7 +548,7 @@
               Online resources
             </span>
             <br />
-            Videos, audio, and Bible reading material &ndash; and more!
+            Videos, audio, Bible reading materials &ndash; and more!
           </td>
         </tr>
         <tr>
@@ -564,7 +556,7 @@
             <table width="100" style="margin: 0;">
               <tr>
                 <td bgcolor="#1e9dd8" style="padding: 0 0 5px; background-color: #1e9dd8; border-radius: 4px; width: 100px;" align="center">
-                  <a href="http://citybibleforum.org/blog"
+                  <a href="http://citybibleforum.org/articles"
                      style="
                      color: #ffffff;
                      font-size: 12px;
@@ -619,7 +611,9 @@
                   <table width="40%" cellpadding="0" cellspacing="0"  border="0" align="right" class="deviceWidth">
                     <tr>
                       <td style="vertical-align: top; padding: 0 5px 10px;">
-                        <a href="http://citybibleforum.org"><img src="http://citybibleforum.org/sites/all/themes/cbootf/logo-email-footer.jpg" alt="" border="0" /></a>
+                        <a href="http://citybibleforum.org">
+                          <img src="http://citybibleforum.org/sites/all/themes/cbootf/logo-email-footer.jpg" alt="City Bible Forum" border="0" />
+                        </a>
                       </td>
                     </tr>
                     <tr>
