Make text in footer white

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -593,13 +593,13 @@
                 <td>
                   <table width="45%" cellpadding="0" cellspacing="0"  border="0" align="left" class="deviceWidth" style="margin-bottom: 30px;">
                     <tr>
-                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
+                      <td style="vertical-align: top; font-size: 11px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
                         This email was sent to:<br/>
                         {contact.display_name}<br/>
                         <br/>
-                        <a href="{action.forward}" style="color: #989898;">Forward</a> this email to a friend or colleague<br/>
-                        <a href="{action.unsubscribeUrl}" style="color: #989898;">Stop</a> receiving emails on this topic<br/>
-                        or <a href="{action.optOutUrl}" style="color: #989898;">never receive</a> emails from us again
+                        <a href="{action.forward}" style="color: #ffffff;">Forward</a> this email to a friend or colleague<br/>
+                        <a href="{action.unsubscribeUrl}" style="color: #ffffff;">Stop</a> receiving emails on this topic<br/>
+                        or <a href="{action.optOutUrl}" style="color: #ffffff;">never receive</a> emails from us again
                       </td>
                     </tr>
                   </table>
@@ -617,7 +617,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td style="vertical-align: top; font-size: 11px; color: #989898; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
+                      <td style="vertical-align: top; font-size: 11px; color: #ffffff; font-weight: normal; text-align: left; font-family: 'Open Sans',Arial,Helvetica,sans-serif; padding: 0 5px;">
                         {domain.address}<br/>
                         {domain.phone}
                       </td>
