Update email template with Emma's feedback

--- a/civimail-template.html
+++ b/civimail-template.html
@@ -398,7 +398,7 @@
               </tr>
             </table>
           </td>
-          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
+          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px; font-family: 'Open Sans',Arial,Helvetica,sans-serif; font-family: 'Open Sans',Arial,Helvetica,sans-serif;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE OF ARTICLE
             </span>
@@ -426,7 +426,7 @@
               </tr>
             </table>
           </td>
-          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
+          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px; font-family: 'Open Sans',Arial,Helvetica,sans-serif;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE OF ARTICLE
             </span>
@@ -454,7 +454,7 @@
               </tr>
             </table>
           </td>
-          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
+          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px; font-family: 'Open Sans',Arial,Helvetica,sans-serif;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE OF ARTICLE
             </span>
@@ -482,7 +482,7 @@
               </tr>
             </table>
           </td>
-          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
+          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px; font-family: 'Open Sans',Arial,Helvetica,sans-serif;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE OF ARTICLE
             </span>
@@ -510,7 +510,7 @@
               </tr>
             </table>
           </td>
-          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
+          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px; font-family: 'Open Sans',Arial,Helvetica,sans-serif;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               TITLE OF ARTICLE
             </span>
@@ -543,7 +543,7 @@
               </tr>
             </table>
           </td>
-          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
+          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px; font-family: 'Open Sans',Arial,Helvetica,sans-serif;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               Online resources
             </span>
@@ -571,7 +571,7 @@
               </tr>
             </table>
           </td>
-          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px;" valign="top">
+          <td style="font-size: 11px; color: #333333; text-align: left; padding-left: 8px; font-family: 'Open Sans',Arial,Helvetica,sans-serif;" valign="top">
             <span style="font-size: 14px; font-weight: bold; color: #02426f; text-align: left; text-decoration:none;">
               Thoughtful articles
             </span>
